fixed some alignment problems

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -565,7 +565,7 @@ select {
   transition: right 0.2s; 
 }
 
-.show {
+form .show {
   right: 15px;
 }
 
